<resources>
    <string name="app_name">shopOnline</string>
    <string name="shoes">Nike</string>
    <string name="nome">S8 Dunk Low Pro</string>
    <string name="n1">Novos</string>
    <string name="n2">Populares</string>
    <string name="n3"> ← </string>
    <string name="n4">1</string>
    <string name="n5">/</string>
    <string name="n6">3</string>
    <string name="n7">→</string>
    <string name="n8">$ 99</string>

</resources>
