<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="205dp"
            android:layout_height="225dp"
            android:layout_weight="-10"
            android:background="#77FF5722"
            android:src="@drawable/nike"
            android:translationX="510dp"
            android:translationY="0dp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="205dp"
            android:layout_height="225dp"
            android:layout_weight="-10"
            android:background="#51F44336"
            android:src="@drawable/nike"
            android:translationX="305dp"
            android:translationY="225dp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="205dp"
            android:layout_height="225dp"
            android:layout_weight="-10"
            android:src="@drawable/nike"
            android:translationX="-102dp"
            android:translationY="225dp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="289dp"
            android:layout_height="match_parent"
            android:layout_weight="-10"


            android:background="#5603A9F4"
            android:src="@drawable/nike"
            android:transformPivotX="0dp"
            android:translationX="-600dp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="205dp"
            android:layout_height="225dp"
            android:layout_weight="-10"
            android:background="#709C27B0"
            android:src="@drawable/nike"
            android:translationX="-600dp"
            android:translationY="0dp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="47dp"
            android:layout_height="37dp"
            android:layout_weight="-10"

            android:src="@drawable/botao"
            android:translationX="-1095dp"
            android:translationY="200dp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="47dp"
            android:layout_height="37dp"
            android:layout_weight="-10"

            android:src="@drawable/carrinho"
            android:translationX="-485dp"
            android:translationY="200dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationX="-1100dp"
            android:translationY="450dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:translationX="-182dp"
            android:translationY="480dp"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lineSpacingExtra="10sp"
            android:text="@string/n1"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:translationX="-2150dp"
            android:translationY="500dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:lineSpacingExtra="10sp"
            android:text="@string/n2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationX="-2790dp"
            android:translationY="500dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/n3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:translationX="-3700dp"
        android:translationY="500dp"
        android:visibility="visible"
        tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/n4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:translationX="-4405dp"
            android:translationY="500dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/n5"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:translationX="-5120dp"
            android:translationY="500dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/n6"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:translationX="-5115dp"
            android:translationY="500dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/n7"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:translationX="-5113dp"
            android:translationY="500dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/n8"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationX="-5463dp"
            android:translationY="50dp"
            android:visibility="visible"
            tools:visibility="visible" />




    </LinearLayout>

</LinearLayout>